--- a/misc/risks.html
+++ b/misc/risks.html
@@ -88,7 +88,7 @@
         As long as we acknowledge and understand the partnership and collaboration process humans and AI, it'll strengthen and prioritize workforce safety as with evolving the future of work towards benefiting individuals and society at large.
         
 
-Why is this? It's because collaboration is essential, and one cannot succeed without the other. Humans can do as they please, while machines need an input and an output.  
+<br><h2>Why is this? It's because collaboration is essential, and one cannot succeed without the other. Humans can do as they please, while machines need an input and an output.  </h2>
       </div>
     <!-- Sign and date the page, it's only polite! -->
     <address>June 2023 <br> by Group 0115, consisting of Benson & Vincent. 
