--- a/misc/choices.html
+++ b/misc/choices.html
@@ -75,6 +75,16 @@
         in the case where a service is in short supply due to high consumer demand. <br>Overall, it's inevitable that AI will drastically change how a workforce operates. In fact, a survey of 1,075 companies in 12 industries found that the more of AI-Human collaboration principles 
         companies adopted (principles such as standard business practices, employee involvement, cultivating and re-imagining employee skills, etc) found an <b>increased overall performance</b> in terms of speed, cost savings, revenues, or other operational measures. 
         A big disadvantage AI has is that what comes naturally to people (making a joke, for example) can be <b>tricky for machines</b>, and what’s straightforward for machines (analyzing gigabytes of data) <b>remains virtually impossible for humans.</b></p>
+      
+      <br>
+      <p>Personal choice will always plays a crucial role in shaping the future of work. The freedom to be and do is what makes us human. While some people may prefer a more hands-on approach and rely on their own skills and creativity, others may choose to embrace AI technologies as powerful 
+        tools to enhance their productivity and efficiency. Whatever of the two options is completely fine and up to the individual at hand. The flexibility to adapt and make informed decisions regarding AI-human collaboration empowers individuals and makes you feel less bound to accept something for the sake of forced acceptence, 
+        this also helps align their work preferences with whatever skills or technologies available. <br> This freedom again allows great leveraging and gives the opportunity to strike a balance between what you choose to do with AI's capabilities and what you choose to do on your own.
+        This balance will always factor in the minds of the indivdual. This ensures that factors such as creativity, critical thinking, or even problem solving skills are not overshadowed or outright dismissed/diminished by AI. This is rather the extreme case. Again, all these skills are utilized 
+        in collaboration with AI, further enhancing the already powerful human capabilities. <br>
+        
+        <p> In the case of companies, Employers, too, will have the capability and choice to determine how they feel or picture the best blend of AI and human resources within their business. 
+          They can assess their specific needs, industry requirements, and technologies to create workplace environments where AI and human employees collaborate seamlessly for mutual benefit, thus leading to overall enhanced productivity.
 
 <br> I will now leave you with this closing statement: <h2><br><b><i>"While AI will radically alter how work gets done and who does it, the technology’s larger impact will be in complementing and augmenting human capabilities, not replacing them."</b></i></h2>
       </div>
