--- a/misc/choices.html
+++ b/misc/choices.html
@@ -83,7 +83,7 @@
         This balance will always factor in the minds of the indivdual. This ensures that factors such as creativity, critical thinking, or even problem solving skills are not overshadowed or outright dismissed/diminished by AI. This is rather the extreme case. Again, all these skills are utilized 
         in collaboration with AI, further enhancing the already powerful human capabilities. <br>
         
-        <p> In the case of companies, Employers, too, will have the capability and choice to determine how they feel or picture the best blend of AI and human resources within their business. 
+        <p> In the case of companies, employers, too, will have the capability and choice to determine how they feel or picture the best blend of AI and human resources within their business. 
           They can assess their specific needs, industry requirements, and technologies to create workplace environments where AI and human employees collaborate seamlessly for mutual benefit, thus leading to overall enhanced productivity.
 
 <br> I will now leave you with this closing statement: <h2><br><b><i>"While AI will radically alter how work gets done and who does it, the technology’s larger impact will be in complementing and augmenting human capabilities, not replacing them."</b></i></h2>
