--- a/misc/choices.html
+++ b/misc/choices.html
@@ -86,7 +86,7 @@
         <p> In the case of companies, employers, too, will have the capability and choice to determine how they feel or picture the best blend of AI and human resources within their business. 
           They can assess their specific needs, industry requirements, and technologies to create workplace environments where AI and human employees collaborate seamlessly for mutual benefit, thus leading to overall enhanced productivity.
 
-<br> I will now leave you with this closing statement: <h2><br><b><i>"While AI will radically alter how work gets done and who does it, the technology’s larger impact will be in complementing and augmenting human capabilities, not replacing them."</b></i></h2>
+<br><br> I will now leave you with this closing statement: <h2><br><b><i>"While AI will radically alter how work gets done and who does it, the technology’s larger impact will be in complementing and augmenting human capabilities, not replacing them."</b></i></h2>
       </div>
     <!-- Sign and date the page, it's only polite! -->
     <address>June 2023 <br> by Group 0115, consisting of Benson & Vincent. 
