--- a/misc/topic.html
+++ b/misc/topic.html
@@ -39,8 +39,11 @@
     <div class="bordered-text">
       <h1>AI-Human Collaboration & The Job Market</h1>
       <h2><u>Technology/Topic</u></h2>
-      <p>Artificial Intelligence is already a hot topic. It seems like in the last few years we've had a sudden boom of AI tools gifted to us. The current "big trend" for AI is to product results in response to our inputs, think for example ChatGPT or Midjourney.</p>
-      <p>How many times have you opened up a support service chat, and it's very first prompt is to direct you to its services chatbot to help you? <br><b>It's a lot more than you think.</b> <br>AI-Human collaboration is already happening, any company can apply AI-Human collaboration in its different areas and already have a competitive advantage over those who do not apply such practices. </p>
+      <p>Artificial Intelligence is already a hot topic. It seems like in the last few years we've had a sudden boom of AI tools gifted to us. The current "big trend" for AI is to product results in response to our inputs, think for example ChatGPT, Midjourney or Bing AI.</p>
+      <p>These are all very helpful and very handy tools to assist us in our everyday lives, but what are the ethical considerations centered around the use and deployment of AI, and incorporating it into our every day lives? and how will it affect the Job Market?
+      <p>How many times have you opened up a support service chat, and it's very first prompt is to direct you to its services chatbot to help you? <br><b>It's a lot more than you think.</b> 
+        
+        <br>AI-Human collaboration is already happening, any company can apply AI-Human collaboration in its different areas and already have a competitive advantage over those who do not apply such practices. This is not just limited to technological companies aswell.</p>
       <p>This collaboration can take different forms, such as using AI algorithms to aid human decision-making processes, automating repetitive tasks, or using AI-powered analytics to gain insights from vast amounts of data. Something that is difficult for us humans to do.
         By integrating AI tools into their operations, companies can increase efficiency, productivity, and accuracy while freeing up human resources to focus on more complex and value-added tasks, and this HAS already occurred. <br>
         The benefits of AI-human collaboration are already evident in fields like <b>healthcare, finance, marketing, and customer service.</b><br><br>
@@ -51,7 +54,13 @@
         However, it's important to note that AI tools <b>are not meant to replace humans entirely.</b> Human expertise, creativity, and empathy still play a crucial role in many domains. Real empathy or creativity cannot be re-created by AI, at the end of the day it will still be 0's and 1's. <br>
         This is why AI tools are most effective when they complement human capabilities, working together to achieve optimal results. The collaboration between AI and humans should be seen as a partnership-like ordeal, with humans providing the judgment, ethical considerations, and emotional intelligence that machines currently lack.<br>
       <h2> One cannot succeed without the other.</h2><br> AI has already drastically changed and revolutionized the way we interact with certain tasks in our day-to-day life, and as the trend continues we'll see more companies embrace AI for overall efficiency and for competitive gain.
-      </div>
+      <p>From personal assistants like Siri and Google Assistant to recommendation systems/algorithms on streaming platforms like Netflix and Amazon, AI has become an increasing integral part of our interactions with various tasks and services.
+        The increasing availability and affordability of AI tools and technologies are making it easier for companies of all sizes to adopt AI solutions. 
+        As AI continues to advance, it also raises concerns and challenges, risk and choices. Ethical considerations around data privacy, bias, and transparency are key topics and need to be addressed to ensure responsible and fair use of AI. 
+        Additionally, the impact of AI on employment and the workforce is a topic of ongoing debate, as some jobs may be automated, while new roles and opportunities emerge.<br>
+        Responsible development and deployment of AI technologies is an essential key to get right first in order to address ethical concerns, ensure a positive impact on society as a whole and ease any pressure or worries that society, indivduals, employees or <b>You</b> as a person may initally have.
+    
+    </div>
     <!-- Sign and date the page, it's only polite! -->
     <address>June 2023 <br> by Group 0115, consisting of Benson & Vincent. 
     <p>
