--- a/misc/references.html
+++ b/misc/references.html
@@ -40,7 +40,7 @@
 </ul>
 
 <!-- Main content -->
-<h1>References</h1>
+	<h1><u>References</u></h1>
 
 
 
@@ -50,6 +50,11 @@
 </ul><h5><p>Makridakis, S. (2017). The forthcoming artificial intelligence (AI) revolution: Its impact on society and firms. Futures, 90, 46-60.</p></h5>
 </ul><h5><p>Mohamed Kande and Murat Sonmez (2020). Don't fear AI. It will lead to long-term job growth. World Economic Forum.</p></h5>
 </ul><h5><p>Sturm, T., Gerlach, J. P., Pumplun, L., Mesbah, N., Peters, F., Tauchert, C., ... & Buxmann, P. (2021). Coordinating human and machine learning for effective organizational learning. MIS Quarterly, 45(3).</p></h5>
+</ul><h5><p>Park, S. Y., Kuo, P. Y., Barbarin, A., Kaziunas, E., Chow, A., Singh, K., ... & Lasecki, W. S. (2019, November). Identifying challenges and opportunities in human-AI collaboration in healthcare. In Conference Companion Publication of the 2019 on Computer Supported Cooperative Work and Social Computing (pp. 506-510).</p></h5>
+</ul><h5><p>Wang, D., Weisz, J. D., Muller, M., Ram, P., Geyer, W., Dugan, C., ... & Gray, A. (2019). Human-AI collaboration in data science: Exploring data scientists' perceptions of automated AI. Proceedings of the ACM on human-computer interaction, 3(CSCW), 1-24.</p></h5>
+</ul><h5><p>Lai, Y., Kankanhalli, A., & Ong, D. (2021). Human-AI collaboration in healthcare: A review and research agenda.</p></h5>
+</ul><h5><p>Puig, X., Shu, T., Li, S., Wang, Z., Liao, Y. H., Tenenbaum, J. B., ... & Torralba, A. (2020). Watch-and-help: A challenge for social perception and human-ai collaboration. arXiv preprint arXiv:2010.09890.</p></h5>
+
 
     <!-- Sign and date the page, it's only polite! -->
     <address>June 2023 <br> by Group 0115, consisting of Benson & Vincent. 
