--- a/misc/references.html
+++ b/misc/references.html
@@ -12,6 +12,8 @@
     </script>
   	<link rel="stylesheet" href="../styles/mystyles.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
+	  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <style>
 .h5 {
