--- a/misc/proposal.html
+++ b/misc/proposal.html
@@ -121,7 +121,7 @@ caption {
 The fear of AI (or commonly “robots”) has always been a fear of any given modern time period.<br>
 The useof AI-Humancollaboration has been known to have a notable performance improvement in its respective job sector.
 <br>The rise of “gig economy” jobs helps sustain independent & short-term commitments compared to those that require a constant streamline of processes.<br>
-Collaboration does not mean replacement, collaboration means enhancement. /em></td>
+Collaboration does not mean replacement, collaboration means enhancement. </em></td>
 	
    </tr>	
 	</hr>
