--- a/misc/rubric.html
+++ b/misc/rubric.html
@@ -18,32 +18,29 @@
   <body>
 <!-- Site navigation menu -->
 <ul class="navbar">
-  <li><a href="../index.html">Home</a>
-  <li><a href="process.html">Process Support</a>
+  <li><a href="../index.html">Home</a></li>
+  <li><a href="process.html">Process Support</a></li>
 </ul>
 
 <h1>Project Assessment Rubric</h1><br>
 <p>Team name: 0115</p>
 
-<p><h4>Student name: Benson Wilson , id: 20107401, Grade: ...............................</p></h4>
- <p><h4>Student name: Yu Pui Ming Vincent, id: 21150745 , Grade: ...............................</p></h4>
+<p><h4>Student name: Benson Wilson , id: 20107401, Grade: ...............................</h4></p>
+ <p><h4>Student name: Yu Pui Ming Vincent, id: 21150745 , Grade: ...............................</h4></p>
 
 <hr/>
 
 
-<p><h6><em>Note: these rubrics on CANVAS will be used to guide the grading of your project</p></h6></em> 
+<p><h6><em>Note: these rubrics on CANVAS will be used to guide the grading of your project</em></h6></p>
+
 
 <h1><a href="https://canvas.aut.ac.nz/courses/14937/rubrics/16328">COMP501 Team Assignment and Individual Component Assessment Criteria</a></h1><br>
  
  
-<h1><a href="https://canvas.aut.ac.nz/courses/14937/rubrics/16327">COMP501 Assignment 3 Individual Component Marking Criteria</a><h1><br>
- 
- 
- 
-<p>
- 
+<h1><a href="https://canvas.aut.ac.nz/courses/14937/rubrics/16327">COMP501 Assignment 3 Individual Component Marking Criteria</a></h1><br>
 
-</p>
+ 
+ 
 </body>
     <!-- Sign and date the page, it's only polite! -->
     <address>June 2023 <br> by Group 0115, consisting of Benson & Vincent. 
