--- a/misc/meetings.html
+++ b/misc/meetings.html
@@ -36,6 +36,14 @@
    
 	  <h1> Microsoft Teams Chat </h1>
 	  <img src="../images/MicrosoftTeams.PNG" alt="Microsoft Teams Chat Screenshot">
+	  <img src="../images/Teams2.PNG" alt="Microsoft Teams Chat Screenshot">
+	  
+	  <h1> Labs 6 - 12 </h1>
+	Research/Website Design & Writing.<br>
+	  Using appropriate APA Referencing with Google Scholar and TA Guidance. <br><br>
+	  
+	  <h2><a href="https://autuni-my.sharepoint.com/:b:/g/personal/hrp8144_autuni_ac_nz/ERbZMAXhO-BKjwnVNVCddt4BuI7EvUkem1eZAFDM-ROOmQ?e=1VO7jv">Introduction Presentation</a></h2><br>
+	  <h2><a href="https://autuni-my.sharepoint.com/:p:/g/personal/hrp8144_autuni_ac_nz/Ec3xGHCyJLVBoQSrabW3wogBpEDKOH4nul-jyPElqtlhLg?e=84GbJo">Presentation Submission</a></h2>
 
   
 
