--- a/misc/meetings.html
+++ b/misc/meetings.html
@@ -35,7 +35,7 @@
 		
    
 	  <h1> Microsoft Teams Chat </h1>
-	  <img src="../images/MicrosoftTeams.PNG" alt="Microsoft Teams Chat Screenshot">
+	  <img src="../images/MicrosoftTeams.PNG" alt="Microsoft Teams Chat Screenshot"><br>
 	  <img src="../images/Teams2.PNG" alt="Microsoft Teams Chat Screenshot">
 	  
 	  <h1> Labs 6 - 12 </h1>
