--- a/misc/meetings.html
+++ b/misc/meetings.html
@@ -43,7 +43,12 @@
 	  Using appropriate APA Referencing with Google Scholar and TA Guidance. <br><br>
 	  
 	  <h2><a href="https://autuni-my.sharepoint.com/:b:/g/personal/hrp8144_autuni_ac_nz/ERbZMAXhO-BKjwnVNVCddt4BuI7EvUkem1eZAFDM-ROOmQ?e=1VO7jv">Introduction Presentation</a></h2><br>
-	  <h2><a href="https://autuni-my.sharepoint.com/:p:/g/personal/hrp8144_autuni_ac_nz/Ec3xGHCyJLVBoQSrabW3wogBpEDKOH4nul-jyPElqtlhLg?e=84GbJo">Presentation Submission</a></h2>
+	  <h2><a href="https://autuni-my.sharepoint.com/:p:/g/personal/hrp8144_autuni_ac_nz/Ec3xGHCyJLVBoQSrabW3wogBpEDKOH4nul-jyPElqtlhLg?e=84GbJo">Presentation Submission</a></h2><br>
+	  <h2><a href="https://canvas.aut.ac.nz/groups/45779/discussion_topics/261976">Canvas Discussion Board</a></h2><br>
+	Most of the teamwork occurred in the LAB sessions or in Microsoft Teams.
+	  <br>
+	  <img src"../images/screencapture-teams-microsoft-2023-06-09-19_08_38.png" alt="Full Microsft Teams Chat Screenshot">
+
 
   
 
