--- a/misc/portfolio.html
+++ b/misc/portfolio.html
@@ -34,7 +34,7 @@
 <h4><p>Team Coordinator/Leader: Benson</p></h4>
 		
 
-  <a href="https://github.com/hrp8144/hrp8144.github.io/tree/main3">Portfolio Repository Alternative Link</a>      
+  <a href="https://github.com/hrp8144/hrp8144.github.io">Portfolio Repository Alternative Link</a>      
 
   
 
