--- a/misc/meetings.html
+++ b/misc/meetings.html
@@ -47,7 +47,7 @@
 	  <h2><a href="https://canvas.aut.ac.nz/groups/45779/discussion_topics/261976">Canvas Discussion Board</a></h2><br>
 	Most of the teamwork occurred in the LAB sessions or in Microsoft Teams.
 	  <br>
-	  <img src"../images/screencapture-teams-microsoft-2023-06-09-19_08_38.png" alt="Full Microsft Teams Chat Screenshot">
+	  <img src="../images/screencapture-teams-microsoft-2023-06-09-19_08_38.png" alt="Full Microsft Teams Chat Screenshot">
 
 
   
