--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- Sign and date the page, it's only polite! -->
     <address>June 2023 <br> by Group 0115, consisting of Benson & Vincent. 
     <p>
-      <em>Made for Assignment 3 of COMP501 - Computing Technology in Society 2023 S1 </em>
+      <em>Made for Assignment 3 of COMP501 - Computing Technology in Society 2023 S1 <br>Thanks to Tony Clear for the foundation of the website</em>
     </p>
       </address>
     <footer>
@@ -51,4 +51,4 @@
       </p>
     </footer>
   </body>
-</html>
+ </html>
