--- a/misc/proposal.html
+++ b/misc/proposal.html
@@ -157,9 +157,9 @@ Collaboration does not mean replacement, collaboration means enhancement. </em><
    </tr>
 	<p align = "left"</p>
 	<th scope="row">Team Member 2</th>
-        <td></td>
-		<td></td>
-        <td></td>
+        <td>yu pui ming</td>
+		<td>vincent</td>
+        <td>21150745</td>
 		 
     </tr>
 	
