--- a/misc/proposal.html
+++ b/misc/proposal.html
@@ -192,10 +192,10 @@ Collaboration does not mean replacement, collaboration means enhancement. </em><
    </tr>
 	<p align = "left"</p>
 	<th scope="row">Team Member 2</th>
-        <td></td>
-		<td></td>
-        <td></td>
-		<td></td>
+        <td>Website Design</td>
+		<td>Writing</td>
+        <td>Referencing</td>
+		<td>Researching</td>
  
     </tr>
 	
